k8s/test-vreapis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vreapi-deployment
  labels:
    app: vreapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vreapi
  template:
    metadata:
      labels:
        app: vreapi
    spec:
      nodeSelector:
        test-node: "true"
      containers:
        - name: vreapi
          image: vreapi-test
          imagePullPolicy: Never
          ports:
          - containerPort: 8000
            protocol: TCP
          livenessProbe:
            httpGet:
              path: "/vre-api-test/api/"
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: "/vre-api-test/api/"
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 10
