k8s/test-vreapis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vreapi-svc
  labels:
    app: vreapi-svc
spec:
  type: NodePort
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: vreapi
  type: ClusterIP
