k8s/test-vreapis/vre-depts-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: postgis/postgis:15-3.3-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: db-service
  labels:
    app: db-service
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: db
  type: ClusterIP
